--- a/springorm/pom.xml
+++ b/springorm/pom.xml
@@ -35,12 +35,19 @@
       <version>6.1.3</version>
     </dependency>
 
-      <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+
+    <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+<dependency>
+  <groupId>org.hibernate.orm</groupId>
+  <artifactId>hibernate-core</artifactId>
+  <version>6.1.7.Final</version>
+</dependency>
+
     <dependency>
-      <groupId>org.hibernate.orm</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>6.1.3.Final</version>
-    </dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-dbcp</artifactId>
+      <version>9.0.80</version>
+  </dependency>
 
 
 
