--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -44,7 +44,28 @@
     <groupId>org.glassfish.web</groupId>
     <artifactId>jakarta.servlet.jsp.jstl</artifactId>
     <version>2.0.0</version>
-</dependency>
+  </dependency>
+
+  <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+  <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-orm</artifactId>
+    <version>6.1.3</version>
+  </dependency>
+
+  <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+  <dependency>
+    <groupId>org.hibernate.orm</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>6.1.7.Final</version>
+  </dependency>
+  
+  <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+  <dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>8.3.0</version>
+  </dependency>
 
   </dependencies>
   <build>
