--- a/bookapi/src/main/resources/application.properties
+++ b/bookapi/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=bookapi
+spring.datasource.name=book_api
+spring.datasource.url=jdbc:mysql://localhost:3306/book_api
+spring.datasource.username=root
+spring.datasource.password=qwsx##HG##123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
