--- a/bookapi/src/main/resources/application.properties
+++ b/bookapi/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# Multipart configurations
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=200MB
+
 spring.application.name=bookapi
 spring.datasource.name=book_api
 spring.datasource.url=jdbc:mysql://localhost:3306/book_api
