--- a/smartcontactmanager/src/main/resources/application.properties
+++ b/smartcontactmanager/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=smartcontactmanager
+
+spring.datasource.url=jdbc:mysql://localhost:3306/contacts_db
+spring.datasource.username=root
+spring.datasource.password=qwsx##HG##123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
