pagination in show contact table

--- a/smartcontactmanager/src/main/resources/application.properties
+++ b/smartcontactmanager/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=qwsx##HG##123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.servlet.multipart.max-file-size=10MB
