--- a/emailapi/src/main/resources/application.properties
+++ b/emailapi/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=emailapi
+
+# Starter way to send email
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_FROM}
+spring.mail.password=${EMAIL_PWD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
