--- a/jwtauthentican/src/main/resources/application.properties
+++ b/jwtauthentican/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=jwtauthentican
 
-spring.security.user.name=harshit
-spring.security.user.password=test
+# spring.security.user.name=harshit
+# spring.security.user.password=harshit
